--- a/docs/kafka.adoc
+++ b/docs/kafka.adoc
@@ -23,13 +23,13 @@ Strimzi is based on Apache Kafka, and makes it easy to run Apache Kafka on OpenS
 
 Strimzi provides three operators:
 
-* Cluster Operator - Responsible for deploying and managing Apache Kafka clusters within an OpenShift or Kubernetes cluster.
-* Topic Operator - Responsible for managing Kafka topics within a Kafka cluster running within an OpenShift or Kubernetes cluster.
-* User Operator - Responsible for managing Kafka users within a Kafka cluster running within an OpenShift or Kubernetes cluster.
+* **Cluster Operator** - Responsible for deploying and managing Apache Kafka clusters within an OpenShift or Kubernetes cluster.
+* **Topic Operator** - Responsible for managing Kafka topics within a Kafka cluster running within an OpenShift or Kubernetes cluster.
+* **User Operator** - Responsible for managing Kafka users within a Kafka cluster running within an OpenShift or Kubernetes cluster.
 
 ## The Goal
 
-In this exercise, we are going to generate (random) names in one component. These names are written in a Kafka topic (`names`). A second component reads from the `names` Kafka topic and applies some magic conversion to the name (adding an honorific). The result is sent to an in-memory stream consumed by a JAX-RS resource. The data is sent to a browser using server-sent events and displayed in the browser.
+In this exercise, we are going to generate (random) names in one component. These names are written in a Kafka topic (`names`). A second component reads from the `names` Kafka topic and applies some magic conversion to the name (adding an honorific). The result is sent to an _in-memory stream_ consumed by a JAX-RS resource. The data is sent to a browser using _server-sent events_ and displayed in the browser.
 
 ::img
 
@@ -37,29 +37,49 @@ In this exercise, we are going to generate (random) names in one component. Thes
 
 The Strimzi operator installs and manages Kafka clusters on Kubernetes. It's been pre-installed for you, so all you have to do is create a Kafka cluster inside your namespace. 
 
-First, open the {{CONSOLE_URL}}[OpenShift Console] and navigate to your project (`userNN-project`). Once there, on the left menu click on Catalog > Developer Catalog and type in `kafka` in the keyword filter box:
+First, open the {{CONSOLE_URL}}[OpenShift Console], log in using your username/password if needed (e.g. `user12`/`pass12`) and navigate to your project (`userNN-project`). Once there, on the left menu click on _Catalog > Developer Catalog_ and type in `kafka` in the keyword filter box:
 
-::img
+image::kafkacatalog.png[kafkacatalog,800]
 
 These are all of the Kafka cluster elements you can install. Click on **Kafka**, and then click on **Create**. This will open a yaml file for you to configure the cluster before it's installed. Change the name of the cluster from `my-cluster` to `names-cluster` (under the _metadata_ section of the YAML file). Leave all other values as-is, and click **Create**:
 
-::img
+image::createkafka.png[createkafka,600]
 
 This will create a new Kafka Kubernetes object in your namespace, triggering the Operator to deploy Kafka.
 After clicking **Create** you will be taken to the list of objects created by the Kafka operator.
 
-Next, click on the **Kafka Topic** tab, and then click **Create Kafka Topic**. We'll need to create a topic for our application to stream to and from, so in the YAML:
+Next, click on the **Kafka Topic** tab:
+
+image::topictab.png[topictab,600]
+
+and then click **Create Kafka Topic**. We'll need to create a topic for our application to stream to and from, so in the YAML:
 
 * Change the _metadata > names_ value from `my-topic` to `names`.
 * Change the vale of the `strimzi.io/cluster` label from `my-cluster` to `names-cluster`
 
 Then click **Create**.
 
-::img
+image::topiccreate.png[topiccreate,600]
 
 This will cause the Operator to provision a new Topic in the Kafka cluster.
 
-Verify that the Kafka and Zookeeper pods are starting up by navigating in the left menu _Workloads > Pods_. You should see a number of pods for kafka and zookeeper (along with your previous application deployments). Don't worry if they're not all in the _Running_ status, they will eventually complete and we'll use them later on in this exercise.
+Verify that the Kafka and Zookeeper pods are starting up by executing this command in a Terminal in Che:
+
+[source,sh,role="copypaste"]
+----
+oc get pods|grep names-cluster
+----
+
+[NOTE]
+====
+You may be logged out of the cluster if you have reloaded the page. If so, just run this command to log in again:
+[source,sh,role="copypaste"]
+----
+oc login https://$KUBERNETES_SERVICE_HOST:$KUBERNETES_SERVICE_PORT --insecure-skip-tls-verify=true
+----
+====
+
+Don't worry if they're not all in the _Running_ status, they will eventually complete and we'll use them later on in this exercise.
 
 ## Add Quarkus Kafka Extension
 
@@ -210,7 +230,7 @@ What about `my-data-stream`? This is an in-memory stream, not connected to a mes
 
 ## Rebuild Executable JAR
 
-Now we are ready to run our application. Using the command palette, select **Build Executable JAR**. You should see a bunch of log output that ends with a `SUCCESS` message.
+Now we are ready to run our application. Using the command palette, select **Create Executable JAR**. You should see a bunch of log output that ends with a `SUCCESS` message.
 
 ## Deploy
 
@@ -221,20 +241,22 @@ And now start the build using our executable JAR:
 oc start-build people --from-file target/*-runner.jar --follow
 ----
 
+The build should take a minute or two to complete.
+
 ## Test
 
-Our application should be up and running and generating names. To see if it's working, run this command in a Terminal to generate the URL to the sample visualization of the stream of names being generated:
+Our application should be up and running in a few seconds after the build completes and generating names. To see if it's working, run this command in a Terminal to generate the URL to the sample visualization of the stream of names being generated:
 
 [source,sh,role="copypaste"]
 ----
-echo http://$(oc get route people -o=go-template --template='{{ .spec.host }}')/names.html
+clear; echo; echo http://$(oc get route people -o=go-template --template='{{ .spec.host }}')/names.html ; echo
 ----
 
 Open a separate browser tab and go to that URL and you should see a cloud of names updating every 5 seconds:
 
-::img
+image::names.png[names,800]
 
-These are the original names streamed through Kafka, altered to add a random honorific, and displayed in a "word cloud" for you to enjoy!
+These are the original names streamed through Kafka, altered to add a random honorific like "Sir" or "Madam", and displayed in a "word cloud" for you to enjoy!
 
 ## Congratulations
 
